Explain activate/deactivate guider actions in more detail
Also shows the 'activate' (play) button in the success colour
to stand out a little more.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,3 +26,15 @@ en:
   time:
     formats:
       date_range_picker: "%e/%m/%Y %H:%M"
+  users:
+    deactivate_confirm: |
+      Deactivate this guider?
+
+      This will remove any bookable slots for this guider.
+      All other data will remain as it was.
+
+      You can re-activate at a later date by clicking the Play button.
+    activate_confirm: |
+      Activate this guider?
+
+      This will create bookable slots for this guider in accordance with their schedules.
