Add page titles across the app
Each page should have it's own tailored title to
aid bookmarking pages, and helping users know
which page they are on in the tab of a browser

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,8 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  service:
+    title: '%{page_title} - Telephone Appointment Planner'
   date:
     formats:
       date_range_picker: '%e/%m/%Y'
